Fixed mismatched titles

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
@@ -37,7 +37,7 @@ including whether the tabs are at the bottom or top of your notebooks.&nbsp;</P>
 left area of the view which allows you to manipulate the view in much the
 same manner as the menu associated with the Workbench window.</P>
 <P CLASS="Para" align="center"><img align="texttop" border="0" src="../images/Image8_view.jpg" alt="Navigator view menu, top left" ></P>
-<P CLASS="Para">The second menu is accessed by clicking on the down arrow <img align="texttop" border="0" src="../images/Image9_viewdownarrow.jpg" alt="View down arror">.
+<P CLASS="Para">The second menu is accessed by clicking on the down arrow <img align="texttop" border="0" src="../images/Image9_viewdownarrow.jpg" alt="View down arrow" width="23" height="18">.
 The view pull-down menu typically contains operations that apply to the entire
 contents of the view, but not to a specific item shown in the view. Operations
 for sorting and filtering are commonly found on the view pull-down.&nbsp;</P>
@@ -56,7 +56,7 @@ Other... at the bottom of the Show View submenu. As we will see later this is
 just one of the many features that allows you to build your own custom work
 environment.&nbsp;</P>
 <P CLASS="Para" align="center">
-<img align="texttop" border="0" src="../images/Image4_showview.jpg" alt="Window > Show View menu" ></P>
+<img align="texttop" border="0" src="../images/Image4_showview.jpg" alt="Window -> Show View menu" width="585" height="331" ></P>
 
 
 <P><a href="qs-07a.htm">
