--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24a.htm
@@ -15,11 +15,11 @@ Exporting files </h2>
 <ul>
   <li>
     <img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="51" height="13">dragging and dropping
-    to the file system
+    to the file system,
     or</li>
   <li>
     <img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="51" height="13">copying
-    and pasting to the file system
+    and pasting to the file system,
     or</li>
   <li>
     using the export wizard.</li>
