--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -49,7 +49,7 @@ provides the full description.&nbsp;
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-Click the Show Next Match button <img align="texttop" border="0" src="../images/Image51_search_next.jpg"  alt="Search next button" >
+Click the Show Next Match button <img align="texttop" border="0" src="../images/Image51_search_next.jpg"  alt="Show next match button" width="23" height="18" >
 to navigate to the first match of the search expression (&quot;it&quot;).&nbsp;</P>
 <P CLASS="Para">
  Notice that the file JanesText.txt is automatically selected and opened in the
