--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d.htm
@@ -62,8 +62,8 @@ while entering the description you can press Escape to cancel the dialog.</P>
 <p CLASS="Para"><b>4.</b>
 </TD>
 <TD valign="top" align="left">
-<p CLASS="Para">The new task appears in the task list.</p>
-<p CLASS="Para"><img align="texttop" border="0" src="../images/Image53_newtask.jpg" alt="Task view" width="477" height="149">
+<p CLASS="Para">The new task appears in the Tasks view.</p>
+<p CLASS="Para"><img align="texttop" border="0" src="../images/Image53_newtask.jpg" alt="Tasks view" width="477" height="149">
 </TD>
 </TR>
 </TBODY>
