--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
@@ -55,7 +55,7 @@ From the marker bar's context menu, select Add Task.</P>
 <P CLASS="Para">
 The marker bar displays any marker including bookmarks, task markers (for associated tasks), and/or debugging breakpoints. You can associate various markers with specific lines in a file by accessing the context menu from the marker bar directly to the left of that line.</P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image53_marker1.jpg" alt="Add task menu" width="420" height="200"></P>
+<img align="texttop" border="0" src="../images/Image53_marker1.jpg" alt="Marker bar menu" width="420" height="200"></P>
 </TD>
 </TR>
 <TR>
@@ -98,7 +98,7 @@ Click OK when you are done.</P>
 Notice that a new task marker appears in the marker bar, directly to the left of the line where you added the task. Also, notice that the new task appears in the Tasks
 view.</P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image53_task_updated.jpg" alt="Task view" width="489" height="390"></P>
+<img align="texttop" border="0" src="../images/Image53_task_updated.jpg" alt="Tasks view" width="489" height="390"></P>
 <P CLASS="Para">
 &nbsp;</P>
 </TD>
