--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
@@ -16,7 +16,7 @@ about to be revealed.&nbsp;</p>
 <p CLASS="Head">Confirm that your shortcut bar at the far left of the window
 still has the Navigator view and looks like this:</p>
 <blockquote>
-  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg" alt="fast view" width="70" height="168"></p>
+  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg" alt="Fast view on shortcut bar" width="70" height="168"></p>
 </blockquote>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
 <THEAD>
