--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07a.htm
@@ -26,7 +26,7 @@ project we will create a folder and file.
 
 <P><a href="qs-07b.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-Using the File menu</a>
+Using the file menu</a>
 
 
 <P><a href="qs-02e.htm">
