--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
@@ -14,10 +14,10 @@ Importing files </h2>
 You can import files into the Workbench either by :</P>
 <ul>
   <li>
-    <img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="51" height="13"> dragging and dropping from the file system or</li>
+    <img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="51" height="13"> dragging and dropping from the file system, or</li>
   <li>
     <img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="51" height="13">
-    copy and pasting from the file system or</li>
+    copy and pasting from the file system, or</li>
   <li>
      using the import wizard.&nbsp;</li>
 </ul>
