--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3f.htm
@@ -25,8 +25,8 @@ have created.</p>
 In the Bookmarks view, select JanesFile.txt (the second bookmark we created) and do one of the following:</P>
 <ul>
   <li>
-    Click the Delete&nbsp; button <img align="texttop" border="0" src="../images/Image54_bookmark_del1.jpg" alt="=Bookmark delete button" width="19" height="19">
-    on the view's toolbar.</p>
+    Click the Delete&nbsp; button <img align="texttop" border="0" src="../images/Image54_bookmark_del1.jpg" alt="Bookmark delete button" width="19" height="19">
+    on the view's toolbar.
   </li>
   <li>
     From the bookmark's context menu choose delete.</p>
@@ -96,7 +96,7 @@ will allow us to watch the editor update as we delete the bookmark.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">In the Bookmarks view, select JanesFile.txt (the remaining
-bookmark). Click the&nbsp; Delete&nbsp; button <img align="texttop" border="0" src="../images/Image54_bookmark_del1.jpg" alt="=Bookmark delete button" width="19" height="19">
+bookmark). Click the&nbsp; Delete&nbsp; button <img align="texttop" border="0" src="../images/Image54_bookmark_del1.jpg" alt="Bookmark delete button" width="19" height="19">
     on the view's toolbar.</P>
 </TD>
 </TR>
