--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
@@ -4,10 +4,10 @@
   <meta http-equiv="Content-Style-Type" content="text/css">
   
   <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Showing full and compressed package names</title>
+  <title>Showing full or compressed package names</title>
 
   </head>
 <body bgcolor="#ffffff">
-<h1 class="Head">Showing full and compressed package names</h1>
+<h1 class="Head">Showing full or compressed package names</h1>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
