--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
@@ -64,7 +64,7 @@ In the Navigator view select the project JanesTeamProject.</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-      <P CLASS="Para"> Click Ginish when you are done.</P>
+      <P CLASS="Para"> Click Finish when you are done.</P>
 </TD>
 </TR>
 <TR>
