--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144.htm
@@ -34,6 +34,7 @@ While the breakpoint is enabled, thread execution suspends before that line of c
 <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
 <a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
 <a href="../tasks/tasks-144b.htm">Enabling and disabling breakpoints</a><br>
+<a href="../tasks/tasks-144c.htm">Managing conditional breakpoints</a><br>
 <a href="../tasks/tasks-145.htm">Setting method breakpoints</a> <br>
 <a href="../tasks/tasks-136.htm">Stepping through 
 the execution of a program</a></p>
