--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144a.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144a.htm
@@ -16,7 +16,7 @@ Line breakpoints are set on an executable line of a program.</P>
   <li>In the editor area, open the file where you want to remove the breakpoint.</li>
   <li>
 <P CLASS="Para">
-Directly to the left of the line where you want to renove the breakpoint, open the 
+Directly to the left of the line where you want to remove the breakpoint, open the 
 marker bar pop-up menu and select <b>Remove Breakpoint</b>. The breakpoint is removed from the workbench.
   </li>
 </ol>
@@ -36,6 +36,7 @@ view</b>.
 <a href="../tasks/tasks-144b.htm">Enabling and disabling breakpoints</a><br>
 <a href="../tasks/tasks-146.htm">Applying hit counts</a><br>
 <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
+<a href="../tasks/tasks-144c.htm">Managing conditional breakpoints</a><br>
 <a href="../tasks/tasks-145.htm">Setting method breakpoints</a> <br>
 <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
