--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144b.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144b.htm
@@ -42,6 +42,7 @@ While the breakpoint is enabled, thread execution suspends before that line of c
 <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
 <a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
 <a href="../tasks/tasks-145.htm">Setting method breakpoints</a> <br>
+<a href="../tasks/tasks-144c.htm">Managing conditional breakpoints</a><br>
 <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p><a href="../reference/ref-35.htm">Breakpoints view</a></p>
