*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
@@ -9,5 +9,30 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Showing and hiding members in Java views</h1>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+<p><br>
+  Several Java views (e.g. Outline, Package Explorer, Members) offer filtering 
+  of members (fields, types and methods). The filters are available as toolbar 
+  buttons. There are 3 member filters:</p>
+<ul>
+  <li><b>Hide Fields</b>: when toggled on, this filter will cause all fields to 
+    be removed from the view.</li>
+  <li><b>Hide Static Members</b>: when toggled on, this filter will cause all 
+    static members to be removed from the view.</li>
+  <li><b>Hide Non-Public Members</b>: when toggled on, this filter will cause 
+    all non-publics members to be removed from the view.</li>
+</ul>
+<p>&nbsp;</p>
+<p>Additionally, Package Explorer can display or hide all elements inside compilation 
+  units.</p>
+<p>To show members in Package Explorer:</p>
+<ul>
+  <li>Select the <b>Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show 
+    members in Package Explorer</b> checkbox</li>
+</ul>
+<p>To hide members in Package Explorer:</p>
+<ul>
+  <li>Unselect the <b>Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show 
+    members in Package Explorer</b> checkbox</li>
+</ul>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
