*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
@@ -26,9 +26,11 @@ You can programmatically compile the Java source files in a project using the bu
 </pre></font>
 <P >
 For a Java project, this will invoke the Java incremental project builder (along with any other incremental project builders that have been added to the project's build spec). The generated .class files will be written to the designated output folder.
-In the case of a full project build, all the .class files in the output folder are 'scrubbed' to ensure that no stale files are found. Make sure to place all your .class files, for which you do not have corresponding source files, in separate class file folders instead of the output folder (see your project's Properties->Java Build Path->Libraries->Advanced). </P>
+In the case of a full batch build, all the .class files in the output folder are 'scrubbed' to ensure that no stale files are found. Make sure to place all your .class files, for which you do not have corresponding source files, in separate class file folders instead of the output folder (see your project's Properties->Java Build Path->Libraries->Advanced). </P>
 <P >
-Additional resource files are also copied to the output folder. You can control which resource files are copied using the resource filter (see Preferences->Java->Compiler->Other). Filenames are filtered if they match one of the supplied patterns. Entire folders are filtered if their name matches one of the supplied folder names which end in a slash. </P>
+Additional resource files are also copied to the output folder. You can control which resource files are copied using the resource filter (see Preferences->Java->Compiler->Other). Filenames are filtered if they match one of the supplied patterns. Entire folders are filtered if their name matches one of the supplied folder names which end in a path separator. </P>
+<P >
+The incremental and batch builders can also be configured to only generate a single error when the .classpath file has errors. This option is set by default and eliminates numerous errors, all usually caused by a missing jar file (see Preferences->Java->Compiler->Other). </P>
 
 <h3>Using the ant javac adapter</h3>
 The Eclipse compiler can be used inside an Ant script using the javac adapter. In order to use the Eclipse compiler, you
