*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-192.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-192.htm
@@ -4,10 +4,23 @@
   <meta http-equiv="Content-Style-Type" content="text/css">
   
   <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Showing and hiding override indications</title>
+  <title>Showing and hiding override indicators</title>
 
   </head>
 <body bgcolor="#ffffff">
-<h1 class="Head">Showing and hiding override indications</h1>
+<h1 class="Head">Showing and hiding override indicators</h1>
+<p>&nbsp;</p>
+<p>Outline and Type Hierarchy views can show special icons (<i>override indicators</i>) 
+  to indicate members that override or implement other members from supertypes.</p>
+<p>To show the override indicators:</p>
+<ul>
+  <li>Select the <b>Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show 
+    override indicators in outline and hierarchy</b> checkbox</li>
+</ul>
+<p>To hide the override indicators:</p>
+<ul>
+  <li>Unselect the <b>Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show 
+    override indicators in outline and hierarchy</b> checkbox</li>
+</ul>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
