--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
@@ -9,5 +9,18 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Showing and hiding method return types  in Java views</h1>
+<p>Several Java views (e.g. Outline, Members) present methods and can also show 
+  their return types.</p>
+<p>To show method return types in Java views:</p>
+<ul>
+  <li>Select the <b>Window &gt; Preferences &gt; Java &gt; Apppearance &gt; Show 
+    method return types</b> checkbox</li>
+</ul>
+<p>To hide method return types in Java views:</p>
+<ul>
+  <li>Unselect the <b>Window &gt; Preferences &gt; Java &gt; Apppearance &gt; 
+    Show method return types</b> checkbox</li>
+</ul>
+<p></p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
