--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
@@ -9,5 +9,24 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Showing full or compressed package names</h1>
+<p>&nbsp;</p>
+<p>Package Explorer and Packages views can show full or compresses package names.</p>
+<p>To show full package names:</p>
+<ul>
+  <li>Unselect the <b>Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress 
+    package name segments</b> checkbox<b>.</b></li>
+</ul>
+<p>To show compressed package names:</p>
+<ul>
+  <li>Select the <b>Window &gt; Preference &gt; Java &gt; Appearance &gt; Compress 
+    package name segments</b> checkbox.
+<br>
+    <b>Note:</b> Compression pattern can contain a digit (n), which represents 
+    n characters in the package name segment. <br>
+    Compression pattern is not used if the resulting name is longer than the 
+    original package name. For example, using a pattern '3~.' on a package named 
+    'org.eclipse.jdt' results in 'org.ecl~.jdt'</li>
+</ul>
+<p>&nbsp;</p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
