--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-195.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-195.htm
@@ -9,5 +9,23 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Sorting elements in Java views</h1>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+<p>Members and Outline views can present members sorted or in the order of declaration 
+  in compilation unit.</p>
+<p>To sort members:</p>
+<ul>
+  <li>Toggle on the Sort toolbar button in the Java view </li>
+</ul>
+<p><b>Note:</b> the sorting order is defined as follows:</p>
+<ul>
+  <li>Nested types are presented before other members</li>
+  <li>Fields are presented before methods</li>
+  <li>Static members are presented before non-static members</li>
+  <li>After the above sorting is performed, members in each group are sorted alfabetically</li>
+</ul>
+<p>&nbsp;</p>
+<p>To present members in the order of declaration in compilation unit.</p>
+<ul>
+  <li>Toggle on the Sort toolbar button in the Java view </li>
+</ul>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
