*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/product_config_install.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_config_install.htm
@@ -83,7 +83,7 @@ by doing the following:</p>
     the name, id, and version of the product.</li>
   <li>store any necessary install info (user, license, date) that is to be shown
     in the about dialog in <b>acmeweb/eclipse/plugins/com.example.acmefeature_1.0.0/about.mappings</b></li>
-  <li>install a suitable<b> install.ini</b> file that sets the property <b>feature.default.id
+  <li>replace the <b>acmeweb/eclipse/install.ini</b> with one that sets the property <b>feature.default.id
     </b>to the product's primary feature</li>
   <li>invoke the product executable using the <b>-initialize</b> option.&nbsp;
     This causes the platform to quietly perform all time-consuming first-time
