--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_feature.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_feature.htm
@@ -21,13 +21,15 @@ products.&nbsp; The platform itself is partitioned into three major features:</p
 </ul>
 <p>There are other minor features, such as examples and OS-dependent portions of
 the platform.&nbsp; </p>
-<p class="Note">Note:&nbsp; The platform installation and update framework
+<blockquote>
+<p><i>Note:&nbsp; The platform installation and update framework
 allows you to build your own custom implementations of the concepts discussed
 here.&nbsp; That is, you can define your own types of <b>features</b>, (their
 packaging formats, install procedures, etc.), as well as your own types of
 server sites for updating your features.&nbsp; The remainder of this discussion
 is focused on the platform default implementations for features and update
-sites. </p>
+sites.</i> </p>
+</blockquote>
 <p>Features do not contain any code.&nbsp; They merely describe a set of
 plug-ins that provide the function for the feature and information about how to
 update it.&nbsp; Features are packaged in a <a href="../reference/misc/feature_archive.html">feature
