--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_primary.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_primary.htm
@@ -25,11 +25,15 @@ manifest:</p>
 	<b>primary=&quot;true&quot;</b> 
 	application=&quot;org.eclipse.ui.workbench&quot;&gt;</font></pre>
 <p>The platform feature has been designated as a primary feature. Although it's
-possible to designate many features as primary features in the <b> feature.xml</b> file,
+possible to designate many features as primary features in their <b>feature.xml</b> 
+files,
 only one primary feature gets control when the platform is launched.&nbsp; This
-is controlled in the <b>install.ini </b>file underneath the <b>eclipse</b>
-directory.&nbsp; Typically, a product only defines branding information for
-one feature and designates this feature as the primary feature.&nbsp; </p>
+is controlled in the product's <b>install.ini </b>file underneath the <b>eclipse</b>
+directory.&nbsp; The <b>feature.default.id</b> property in this file designates
+the primary feature for the product.&nbsp; Typically, a product only defines branding information for
+one feature and designates this feature in the <b>install.ini </b>file.&nbsp;
+(If there are multiple eligible primary features, the <b>-feature </b>command
+line option for <b>eclipse.exe</b> overrides the choice made in <b>install.ini</b>.) </p>
 <p>The branding information for the feature is located in a plug-in of the same
 name as the primary feature.&nbsp; The files that designate and define branding
 information for our hypothetical acmeweb application are highlighted in the
