*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_accelSet.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_accelSet.htm
@@ -14,8 +14,9 @@ Accelerator sets
 <h3>Accelerator sets</h3>
 
 
-<p>The map between an action definition and the key combinations that should
-invoke the action is called an <b>accelerator set</b>.&nbsp; Plug-ins can
+<p>The association between an action definition and the key combinations that should
+invoke the action is called an <b>accelerator</b>.&nbsp; An <b>accelerator set</b>
+is a list of accelerators.&nbsp; Plug-ins can
 contribute accelerator sets using the <b><a href="../reference/extension-points/org_eclipse_ui_acceleratorSets.html">org.eclipse.ui.acceleratorSets</a></b>
 extension point.&nbsp; The workbench defines an accelerator set that provides
 emacs-like key bindings:&nbsp;</p>
