--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget_contribute_actionsets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget_contribute_actionsets.htm
@@ -56,7 +56,7 @@ action set is visible.&nbsp; However, they will not be enabled if the readme
 tool's editor or outline view are not active.</p>
 <p><img border="0" src="images/readmeactionsetmenu.jpg" width="569" height="75" alt="Readme File Editor menu with two grayed items and one enabled item"></p>
 <p>&nbsp;</p>
-<p>What does the editor and view have to do?&nbsp; Again, the client side is
+<p>What do the editor and view have to do?&nbsp; Again, the client side is
 similar to registering a handler for the workbench or an editor's retargetable
 action.&nbsp; The action id specified in the markup must be used when
 registering a global action handler.</p>
