*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
@@ -38,8 +38,9 @@ Eclipse Workbench. The following lists some of them.
 </P>
 <P CLASS="Para">
   <dt>Single click activation</dt>
-  <dd>You now have the option to activate files with a single instead of a double 
-  	mouse click. See the <b>Workbench</b> preference page for related settings.
+  <dd>You now have the option to activate files with a <a href="../tasks/topenmode.htm">single click</a>
+  	instead of a double mouse click. See the <b>Workbench</b> preference page
+  	for related settings.
   </dd>
 </P>
 <P CLASS="Para">
