*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_controls.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_controls.htm
@@ -72,7 +72,7 @@ graphics. Often used to implement custom controls.</td>
 
 <td WIDTH="183">
 <div CLASS="CellBody"><b>BORDER, H_SCROLL, V_SCROLL,
-NO_BACKGROUND, NO_FOCUS, NO_MERGE_PAINTS, NO_REDRAW_RESIZE</b></div>
+NO_BACKGROUND, NO_FOCUS, NO_MERGE_PAINTS, NO_REDRAW_RESIZE, NORADIOGROUP</b></div>
 </td>
 
 <td WIDTH="146">Dispose, Control*</td>
@@ -149,7 +149,7 @@ the cool items contained in the bar.</td>
 positionable area of a cool bar.</td>
 
 <td WIDTH="183">
-<div CLASS="CellBody">&nbsp;</div>
+<div CLASS="CellBody"><b>DROP_DOWN</b></div>
 </td>
 
 <td WIDTH="146">Dispose</td>
@@ -180,8 +180,7 @@ SHADOW_ETCHED_OUT, SHADOW_IN, SHADOW_OUT, SHADOW_NONE</b></div>
 
 <td WIDTH="183">
 <div CLASS="CellBody"><b>BORDER, CENTER, LEFT, RIGHT,
-WRAP, SEPARATOR (</b>with<b> HORIZONTAL, SHADOW_IN,
-SHADOW_OUT, VERTICAL)</b></div>
+WRAP, SEPARATOR (</b>with<b> HORIZONTAL, SHADOW_IN, SHADOW_OUT, SHADOW_NONE, VERTICAL)</b></div>
 </td>
 
 <td WIDTH="146">Dispose, Control*</td>
@@ -436,7 +435,7 @@ DROP_DOWN</b></td>
 <td WIDTH="226">User interface object that implements rubber banding rectangles.</td>
 
 <td WIDTH="183">
-<div CLASS="CellBody">&nbsp;</div>
+<div CLASS="CellBody"><b>LEFT, RIGHT, UP, DOWN, RESIZE</b></div>
 </td>
 
 <td WIDTH="146">Dispose, Move</td>
