--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_events.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_events.htm
@@ -86,8 +86,7 @@ Generated when a control is moved or resized.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Control, TableColumn, Tracker</b></P>
+<b>Control</b>, <b>TableColumn</b>, <b> Tracker</b></P>
 </TD>
 </TR>
 <TR>
@@ -134,8 +133,7 @@ Generated when the user requests help for a widget, such as pressing the F1 key.
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Control, Menu, MenuItem</b></P>
+<b>Control</b>, <b>Menu</b>, <b> MenuItem</b></P>
 </TD>
 </TR>
 <TR>
@@ -184,7 +182,7 @@ Generated when a widget's text is modified.</P>
 <TD width="250">
 <P CLASS="CellBody">
 <b>
-CCombo, Combo, Text, StyledText</b></P>
+CCombo</b>, <b>Combo</b>, <b>Text</b>, <b> StyledText</b></P>
 </TD>
 </TR>
 <TR>
@@ -264,8 +262,10 @@ Generated when the user selects an item in the control.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Button, CCombo, Combo, CTabFolder, List, MenuItem, Sash, Scale, ScrollBar, Slider, StyledText, TabFolder, Table, TableColumn, TableTree, Text, ToolItem, Tree</b></P>
+<b>Button</b>, <b>CCombo</b>, <b>Combo</b>, <b>CoolItem</b>, <b>CTabFolder</b>, <b>List</b>,
+<b> MenuItem</b>, <b>Sash</b>, <b>Scale</b>, <b> ScrollBar</b>, <b>Slider</b>, <b> StyledText</b>,
+<b> TabFolder</b>, <b>Table</b>, <b>Table Cursor</b>,&nbsp; <b>TableColumn</b>, <b> TableTree</b>,
+<b>Text</b>, <b>ToolItem</b>, <b> Tree</b></P>
 </TD>
 </TR>
 <TR>
@@ -313,8 +313,7 @@ Generated when the user expands or collapses items in the tree.</P>
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Tree, TableTree</b></P>
+<b>Tree</b>, <b> TableTree</b></P>
 </TD>
 </TR>
 <TR>
@@ -329,8 +328,7 @@ Generated when a widget's text is about to be modified. Gives the application a 
 </TD>
 <TD width="250">
 <P CLASS="CellBody">
-<b>
-Text, StyledText</b></P>
+<b>Text</b>, <b> StyledText</b></P>
 </TD>
 </TR>
 </TABLE>
